[package]
name = "discord-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", features = ["framework", "standard_framework","unstable_discord_api"] }
tokio = { version = "1", features = ["full"] }
