[package]
name = "discord-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = [
    "gateway",
    "client",
    "standard_framework",
    "rustls_backend",
    "model",
] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15.0"
